@@ -4,6 +4,8 @@ PostGIS 3.4.4dev
 * Bug Fixes *
 
   - Quote-protect output paths of pgtopo_export (Sandro Santilli)
+  - #5785, [raster] ST_MapAlgebra segfaults when expression references
+         a supernumerary rast argument (Dian M Fay)
 
 
 
